Add Istanbul reporting libraries

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "devDependencies": {
     "@types/istanbul-lib-coverage": "^2.0.4",
+    "@types/istanbul-lib-report": "^3.0.0",
+    "@types/istanbul-reports": "^3.0.1",
     "@types/lodash": "^4.14.181",
     "@types/ws": "^8.5.3",
     "esbuild": "^0.14.29",
@@ -20,6 +22,8 @@
   "dependencies": {
     "@recordreplay/protocol": "^0.21.0",
     "istanbul-lib-coverage": "^3.2.0",
+    "istanbul-lib-report": "^3.0.0",
+    "istanbul-reports": "^3.1.4",
     "lodash": "^4.17.21",
     "ws": "^8.5.0"
   }
